# kaleidoscope

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
include/: ast.hpp  codegen.hpp  constants.hpp  lexer.hpp  logger.hpp  parser.hpp
include/ast/: ast.hpp  parser.hpp  printer.hpp
lib/: codegen.cpp  lexer.cpp  main.cpp
lib/ast/: parser.cpp  printer.cpp
samples/: basic.k  cond.k  control_flow.k  loop.k
src/: lexer.cpp  main.cpp  parser.cpp
